--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,31 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": [
-      "ESNext"
-    ],
-    "types": [
-      "vite/client"
-    ],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
+    "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "allowJs": false,
+    "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "jsx": "react-jsx",
+    "useDefineForClassFields": true,
   },
+  "types": [
+    "vite/client"
+  ],
   "include": [
-    "."
+    "src"
   ],
   "exclude": [
+    "node_modules",
     "dist",
-    "node_modules"
   ]
 }
